# odoo

./: .bzrignore  .coveragerc  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  .weblate.json  1  AGENTS.md  ArquitecturaModuloVnetas.md  BRIAN-NOTES.md  CLAUDE.MD  CLAUDE.md  CNAME  CODEOWNERS  COLOMBIAN_COMPLIANCE_PLAN.md  COMPLETE_INTERACTION_IMPLEMENTATION.md  CONTRIBUTING.md  COPYRIGHT  CREATE_USER_MANUAL.md  CUSTOM_README.md  Creepypastas  DECISIONS.md  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  Dockerfile.debug  Dockerfile.dockerfile  Dockerfile.prod  FEATURES.rst  FIX_ACCESS_DENIED.md  FIX_RL_RENDERPM_ERROR.md  GOV_ENV_DEPENDENCIES.md  HOW_TO_USE_DOCKERFILE_DEBUG.md  (+276 more)
addons/: $  .bzrignore  .project  .project.moved  .pydevproject  __init__.py  __openerp__.py  account.py  account_view.xml  bzr_log.E6eoBaY  messages.mo  module_reindex  network_demo.xml  pyproject.toml  screen_recorder  test.txt  test2.text
addons/Ash_sales_test_2/: __manifest__.py
addons/Ash_stock_move_extension/: __manifest__.py  views.xml
addons/Custom_Layouts_models_AES_V18/: __manifest__.py
addons/Custom_layouts_models_Future_Télécom_V19/: __manifest__.py
addons/Hospital_Management_Custom/: __manifest__.py
addons/My_custom_module/: __init__.py  __manifest__.py
addons/Odoo_frisle/: __init__.py  __manifest__.py
addons/Real_Estate/: __manifest__.py
addons/a_bot/: __manifest__.py
addons/aaa_polo_metriks_custom_sales/: __manifest__.py
addons/aaa_test/: __manifest__.py
addons/account/: README.md  __init__.py  __manifest__.py  __openerp__.py  __terp__.py  account.py  account_analytic_line.py  account_analytic_view.xml  account_assert_test.xml  account_bank.py  account_bank_statement.py  account_bank_statement.py.rej  account_bank_view.xml  account_cash_statement.py  account_demo.xml  account_end_fy.xml  account_financial_report.py  account_financial_report_data.xml  account_installer.xml  account_invoice.py  account_invoice_view.xml  account_invoice_workflow.xml  account_journal_dashboard.py  account_journal_view.xml  account_menuitem.xml  account_move.py  account_move_line.py  account_move_line_extended.py  account_move_line_extended.xml  account_move_reconciliation.py  account_move_reconciliation.xml  account_payment.py  account_pre_install.yml  account_report.xml  account_security.xml  account_tip_data.xml  account_unit_test.xml  account_view.xml  account_view_transfer.xml  account_wizard.xml  (+27 more)
addons/account_accountant/: __manifest__.py  __openerp__.py  account_accountant_data.xml  account_accountant_demo.xml  account_security.xml
addons/account_add_gln/: __manifest__.py
addons/account_analytic_analysis/: __init__.py  __openerp__.py  __terp__.py  account_analytic_analysis.py  account_analytic_analysis_cron.xml  account_analytic_analysis_menu.xml  account_analytic_analysis_report.xml  account_analytic_analysis_view.xml  analytic_account_demo.xml  analytic_account_demo.yml  cron_account_analytic_account.py  ir.actions.server.xml  ir.model.access.csv  product_template.py  res_config.py  res_config_view.xml  res_partner.py  res_partner_view.xml  sale_order.py
addons/account_analytic_default/: __init__.py  __manifest__.py  __openerp__.py  __terp__.py  account_analytic_default.py  account_analytic_default.xml  account_analytic_default_view.xml
addons/account_analytic_default_hr_expense/: __manifest__.py
addons/account_analytic_default_purchase/: __manifest__.py
addons/account_analytic_plans/: __init__.py  __openerp__.py  __terp__.py  account_analytic_plans.py  account_analytic_plans_installer_view.xml  account_analytic_plans_report.xml  account_analytic_plans_view.xml  installer_view.xml  model_wizard.xml
addons/account_anglo_saxon/: __init__.py  __openerp__.py  __terp__.py  invoice.py  product.py  product_view.xml  purchase.py  sale.py  stock.py
addons/account_asset/: µ  (+14 more)
(+245008 files in other folders)
