[project]
name = "odoo-addons-oca-knowledge"
version = "18.0.20251231.0"
dependencies = [
    "odoo-addon-attachment_preview==18.0.*",
    "odoo-addon-attachment_zipped_download==18.0.*",
    "odoo-addon-document_knowledge==18.0.*",
    "odoo-addon-document_page==18.0.*",
    "odoo-addon-document_page_access_group==18.0.*",
    "odoo-addon-document_page_access_group_user_role==18.0.*",
    "odoo-addon-document_page_approval==18.0.*",
    "odoo-addon-document_page_group==18.0.*",
    "odoo-addon-document_page_partner==18.0.*",
    "odoo-addon-document_page_project==18.0.*",
    "odoo-addon-document_page_reference==18.0.*",
    "odoo-addon-document_page_tag==18.0.*",
    "odoo-addon-document_url==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
