[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf417gen"
authors = [{ name="Ivan Habunek", email="ivan@habunek.com" }]
description = "PDF417 2D barcode generator for Python"
keywords=["pdf417", "2d", "barcode", "generator"]
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "Pillow>=3.3.0"
]

[tool.setuptools]
packages = [
    "pdf417gen",
    "pdf417gen.compaction"
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

test = [
    "mock",
    "pytest",
    "pytest-cov",
    "vermin",
]

[project.urls]
"Homepage" = "https://github.com/ihabunek/pdf417-py/"

[project.scripts]
pdf417gen = "pdf417gen.console:main"

[tool.pyright]
include = ["pdf417gen"]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
